--- a/src/index.css
+++ b/src/index.css
@@ -66,13 +66,6 @@
   filter: drop-shadow(4px 4px 1px rgb(23, 5, 87));
 }
 
-.dark-btn-shadow {
-  box-shadow: 0px 6px 0px 0px #301a6b;
-}
-.light-btn-shadow {
-  box-shadow: 0px 3px 0px 0px #ffffff;
-}
-
 .loader {
   height: 100px;
   aspect-ratio: 2;
@@ -104,7 +97,6 @@
   content: "Loading...";
 }
 
-/* globals.css */
 .custom-scroll::-webkit-scrollbar {
   width: 6px;
   height: 6px;
@@ -114,8 +106,25 @@
   margin: 1em;
 }
 .custom-scroll::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.5); /* kolor "uchwytu" scrola */
+  background: rgba(0, 0, 0, 0.5);
   border-radius: 2em;
+}
+
+@layer components {
+  .main-white-btn {
+    @apply bg-white text-main-dark-blue text-lg md:text-2xl font-black uppercase p-3 rounded-lg dark-btn-shadow cursor-pointer hover:bg-slate-200 transition-colors;
+  }
+  .main-dark-btn {
+    @apply bg-main-dark-blue text-white text-lg md:text-2xl font-black uppercase px-3 py-3 rounded-lg light-btn-shadow cursor-pointer hover:bg-blue-950 transition-colors;
+  }
+}
+
+@utility dark-btn-shadow {
+  box-shadow: 0px 6px 0px 0px #301a6b;
+}
+
+@utility light-btn-shadow {
+  box-shadow: 0px 3px 0px 0px #ffffff;
 }
 
 @keyframes l3-0 {
